# steelcli

./: .gitignore  Cargo.toml  README.md
src/: change.rs  describe.rs  device_ops.rs  errors.rs  list.rs  main.rs  runner.rs
src/config/: cli.yml
src/core/: color.rs  mod.rs
src/devices/: arctis.rs  arctis_five.rs  device.rs  mod.rs  sensei_ten.rs
src/lcore/: color.rs  log.rs  mod.rs  steelseries_device.rs
src/steelseries_core/: color.rs  errors.rs  log.rs  mod.rs  side.rs  steelseries_device.rs  support.rs
src/utils/: mod.rs
