[package]
name = "steelseries-engine"
version = "0.1.0"
authors = ["sixpounder"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "~2.33.3", features = ["yaml"] }
rusb = "0.6.4"
sudo = "0.5.0"
byteorder = "1.3.4"
