[package]
name = "steelcli"
version = "0.1.0"
authors = ["Andrea Coronese <sixpounder@protonmail.com>"]
edition = "2021"
readme = "README.md"
license = "GPL-2.0"
description = "A CLI frontend to SteelSeries devices"
homepage = "https://github.com/sixpounder/steelcli"
repository = "https://github.com/sixpounder/steelcli"
categories = ["command-line-utilities"]
keywords = [
    "usb",
    "steelseries",
    "devices"
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "~2.33.3", features = ["yaml"] }
sudo = "0.5.0"
byteorder = "1.3.4"
colored = "2.0.0"
lazy_static = "1.4.0"
hidapi = "1.3.4"
regex = "1.5.5"
